// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Basic 1`] = `
Array [
  <div
    className="sc-AykKC ikBWyJ"
  >
    <p
      className="sc-AykKE eTfmAo"
      fontFamily="body"
    >
      This is a box
    </p>
  </div>,
  <div
    className="sc-AykKC ektJKb"
  >
    <p
      className="sc-AykKE hkjDdQ"
      fontFamily="body"
    >
      This is a box
    </p>
  </div>,
]
`;

exports[`Storyshots Box Box 1`] = `
Array [
  <div
    className="sc-AykKC ikBWyJ"
  >
    <p
      className="sc-AykKF hVplQF"
      fontFamily="body"
    >
      This is a box
    </p>
  </div>,
  <div
    className="sc-AykKC ektJKb"
  >
    <p
      className="sc-AykKF kmtCuh"
      fontFamily="body"
    >
      This is a box
    </p>
  </div>,
]
`;

exports[`Storyshots Flex Flex 1`] = `
<div
  className="sc-AykKC sc-AykKG kxRiQf"
>
  <div
    className="sc-AykKC ikBWyJ"
  >
    <p
      className="sc-AykKF hVplQF"
      fontFamily="body"
    >
      This is a flex box item
    </p>
  </div>
  <div
    className="sc-AykKC ektJKb"
  >
    <p
      className="sc-AykKF hVplQF"
      fontFamily="body"
    >
      This is a flex box item
    </p>
  </div>
</div>
`;

exports[`Storyshots Grid Grid 1`] = `
<div
  className="sc-AykKC sc-AykKH jogWjD"
>
  <div
    className="sc-AykKC ikBWyJ"
  >
    <p
      className="sc-AykKF hVplQF"
      fontFamily="body"
    >
      This is a grid box
    </p>
  </div>
</div>
`;
